# EinigOderAus

./: .gitignore  CLAUDE.md  CONCEPT.md  README.md  app.py  config.py  game_config.json  pyproject.toml
game/: models.py  question_loader.py  state_machine.py  stats.py
input/: base.py  keyboard.py
questions/: fragen.md
questions/allgemein/: allgemein.md
questions/gesellschaft/: gesellschaft.md
questions/schule/: schule.md
scripts/: einig-hotspot.service  einig-oder-aus.service  generate_images.py  hotspot.sh  install.sh  kiosk.sh
static/css/: style.css
static/img/cutouts/objects/: wartemaschine.pxd
static/js/: animation-scenes.js  animations.js  audio.js  game.js  input.js
taster/: code.py  install.sh
templates/: admin.html  audiotest.html  game.html
tests/: test_question_loader.py  test_state_machine.py
web/: routes.py  socket_events.py
